@@ -16,6 +16,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       This creates problems for the aprun -B command.
   b - Fix a problem running extremely large jobs with alps 1.1 and 1.2. Reservations
       weren't correctly created in the past. TRQ-1092.
+  b - Fixed a deadlock with a queue mutex caused by call qstat -a <queue1> <queue2>
 
 4.1.0
   e - make free_nodes() only look at nodes in the exec_host list and not examine
